swagger for Groups and matches
